multiple changes + navbar added on all pages

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./edible-and-non-edible-oils.html">Edible & Non-Edible
                                 Oils</a></li>
-                        <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li>
+                        <!-- <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li> -->
                         <li><a class="dropdown-item" href="./petroleum-and-oil-products.html">Petroleum & Oil
                                 Products</a></li>
                         <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
@@ -107,7 +107,7 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="./edible-and-non-edible-oils.html">Edible & Non-Edible Oils</a>
                     </li>
-                    <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li>
+                    <!-- <li><a class="dropdown-item" href="./chemicals.html">Chemicals</a></li> -->
                     <li><a class="dropdown-item" href="./petroleum-and-oil-products.html">Petroleum & Oil Products</a>
                     </li>
                     <li><a class="dropdown-item" href="./agro-commodities.html">Agro Commodities</a></li>
@@ -227,7 +227,7 @@
                 <div class="col-12 p-content-container mb-3">
                     <div class="box-about">
                         <h2 class="text-start text-dark">ABOUT US</h2>
-                        <p class="p-content text-dark regular-font">At Bhagirath BVM Grand (HK) Limited, we are the
+                        <p class="p-content text-dark regular-font">At Bhagirath Industries, we are the
                             catalysts of
                             global trade, a company that thrives on connecting the world through commerce. With a
                             passion for trade that transcends borders and industries, we're your trusted partner for all
@@ -254,7 +254,7 @@
                         <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-2-alt.webp"
                             class="card-img-top" alt="We Serve Globally">
                         <h3 class="about-card-title text-dark">We Serve Globally</h3>
-                        <p class="about-card-text text-black regular-font">At Bhagirath BVM Grand, we're dedicated to
+                        <p class="about-card-text text-black regular-font">At Bhagirath Industries, we're dedicated to
                             serving the
                             world. Our products and services know no boundaries, ensuring you receive the best no matter
                             where you are. Our mission is to enrich lives globally through trade, right to your
@@ -317,7 +317,7 @@
         <div class="container">
             <div class="content-our-skill">
                 <h2 class="text-center">OUR SKILLS</h2>
-                <p class="pb-5 regular-font text-center">At Bhagirath BVM Grand, we pride ourselves on delivering your
+                <p class="pb-5 regular-font text-center">At Bhagirath Industries, we pride ourselves on delivering your
                     goods on time,
                     every time, with a high success rate that speaks to our commitment to your satisfaction. We excel in
                     swiftly sourcing quality products and maintaining transparent, clear communication throughout our
@@ -328,7 +328,7 @@
 
             <div class="container">
                 <div class="row text-center justify-content-around">
-                    <div class="col-md-3 box-our-skill">
+                    <div class="col-md-6 col-lg-3 box-our-skill">
                         <div class="skill-icon">
                             <div class="circle">
                                 <img src="assets/images/home-page-images/our-skills-icon/image%205.png" alt="">
@@ -338,7 +338,7 @@
                         <h2 class="skill-counting-content">On Time Delivery</h2>
                     </div>
 
-                    <div class="col-md-3 box-our-skill">
+                    <div class="col-md-6 col-lg-3 box-our-skill">
                         <div class="skill-icon">
                             <div class="circle">
                                 <img src="assets/images/home-page-images/our-skills-icon/image%206.png" alt="">
@@ -348,7 +348,7 @@
                         <h2 class="skill-counting-content">Success Rate</h2>
                     </div>
 
-                    <div class="col-md-3 box-our-skill">
+                    <div class="col-md-6 col-lg-3 box-our-skill">
                         <div class="skill-icon">
                             <div class="circle">
                                 <img src="assets/images/home-page-images/our-skills-icon/image%207.png" alt="">
@@ -358,7 +358,7 @@
                         <h2 class="skill-counting-content">Availability of Good</h2>
                     </div>
 
-                    <div class="col-md-3 box-our-skill">
+                    <div class="col-md-6 col-lg-3 box-our-skill">
                         <div class="skill-icon">
                             <div class="circle">
                                 <img src="assets/images/home-page-images/our-skills-icon/image%208.png" alt="">
@@ -392,7 +392,7 @@
         <div class="container">
             <div class="our-services-content text-center">
                 <h2>OUR SERVICES</h2>
-                <p class="regular-font">At Bhagirath BVM Grand, we're here to cater to your every need. Our range of
+                <p class="regular-font">At Bhagirath Industries, we're here to cater to your every need. Our range of
                     services is designed to
                     make your life easier and more efficient. Here's what we offer</p>
             </div>
@@ -495,7 +495,7 @@
                 <div class="row">
                     <!-- First Section: Text -->
                     <div class="new-trading-portfolio-box-text col-md-4 order-md-1">
-                        <p class="regular-font">Bhagirath BVM Grand (HK) Limited Trading Portfolio. We serve as the
+                        <p class="regular-font">Bhagirath Industries Trading Portfolio. We serve as the
                             catalysts of global
                             trade, connecting the world through commerce. Our passion for trade transcends borders, and
                             we're your trusted partner for all things products. From sourcing to supply, we inspire
@@ -565,7 +565,7 @@
                         class="img-fluid-footer-logo"> -->
                     <img src="./assets/images/footer-section/footer-logo-2.webp" alt="Company Logo"
                         class="img-fluid img-fluid-footer-logo">
-                    <p class="text-light pt-2">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
+                    <p class="text-light pt-2">At Bhagirath Industries, we are the catalysts of global
                         trade, a company that thrives on connecting the world through commerce.</p>
                 </div>
                 <!-- frame 40 -->
@@ -593,8 +593,7 @@
                 <!-- frame 39 -->
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
                     <h3>Contact Us</h3>
-                    <p class="pt-3">Address - Room TA07, 6th Floor Woon Lee, Commercial Building No. 7-9 Austin Avenue
-                        Tsim Sha Tsui, Kowloon (HK)</p>
+                    <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
                 </div>
                 <!-- frame 38 -->
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
@@ -626,7 +625,7 @@
             </div>
             <hr class="hr-line text-white">
             <div class="footer-p-content text-white">
-                <p class="text-md-center copyright-text">© Copyright Bhagirath BVM Grand (HK) Limited. All Rights
+                <p class="text-md-center copyright-text">© Copyright Bhagirath Industries. All Rights
                     Reserved.</p>
             </div>
         </div>
@@ -688,34 +687,7 @@
             document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE, and Opera
         };
 
-        // THIS IS THE SCRIPT THAT MAKES THE NAVBAR VANISH WHEN SCROLLING DOWN ON SMALL SCREENS
-
-        // document.addEventListener('DOMContentLoaded', function () {
-        //     let lastScrollTop = 0;
-        //     const navbar = document.querySelector('.new-navbar-container');
-        //     const isMobileView = window.matchMedia("(max-width: 767px)");
-        //     // const dropdownSelector = document.querySelector('.new-navbar-dropdown');
-        //     window.addEventListener('scroll', function () {
-        //         if (isMobileView.matches) { // Apply only on mobile screens
-        //             let currentScrollTop = window.pageYOffset || document.documentElement.scrollTop;
-        //             if (currentScrollTop > lastScrollTop) {
-        //                 navbar.classList.add('navbar-hidden');
-        //                 // dropdownSelector.classList.remove('show'); // Added later
-        //             } else {
-        //                 navbar.classList.remove('navbar-hidden');
-        //             }
-        //             lastScrollTop = currentScrollTop <= 0 ? 0 : currentScrollTop; // Prevent negative scroll values
-        //         }
-        //     });
-        //     //Screen resize handling
-        //     window.addEventListener('resize', function () {
-        //         if (!isMobileView.matches) {
-        //             navbar.classList.remove('navbar-hidden'); // Ensure navbar is visible
-        //         }
-        //     });
-        // });
-
-        //SWIPER SCRIPT
+        // SWIPER SCRIPT
 
         var swiper = new Swiper(".mySwiper", {
             // autoHeight: true,
@@ -741,7 +713,34 @@
             },
         });
 
-        // NEW NAVBAR TOGGLER 
+        // THIS IS THE SCRIPT THAT MAKES THE NAVBAR VANISH WHEN SCROLLING DOWN ON SMALL SCREENS
+
+        document.addEventListener('DOMContentLoaded', function () {
+            let lastScrollTop = 0;
+            const navbar = document.querySelector('.new-navbar-container');
+            const isMobileView = window.matchMedia("(max-width: 767px)");
+            // const dropdownSelector = document.querySelector('.new-navbar-dropdown');
+            window.addEventListener('scroll', function () {
+                if (isMobileView.matches) { // Apply only on mobile screens
+                    let currentScrollTop = window.pageYOffset || document.documentElement.scrollTop;
+                    if (currentScrollTop > lastScrollTop) {
+                        navbar.classList.add('navbar-hidden');
+                        // dropdownSelector.classList.remove('show'); // Added later
+                    } else {
+                        navbar.classList.remove('navbar-hidden');
+                    }
+                    lastScrollTop = currentScrollTop <= 0 ? 0 : currentScrollTop; // Prevent negative scroll values
+                }
+            });
+            //Screen resize handling
+            window.addEventListener('resize', function () {
+                if (!isMobileView.matches) {
+                    navbar.classList.remove('navbar-hidden'); // Ensure navbar is visible
+                }
+            });
+        });
+
+        // NEW NAVBAR TOGGLER/DROPDOWN
 
         document.addEventListener('DOMContentLoaded', function () {
             const toggler = document.getElementById('navbarToggler');
@@ -772,6 +771,14 @@
                     if (dropdown.style.display = "block") {
                         dropdown.style.display = 'none';
                     }
+                }
+            });
+            // Scroll event - this closes the dropdown when someone scrolls
+            window.addEventListener('scroll', function () {
+                if (dropdown.classList.contains('show')) {
+                    dropdown.classList.remove('show');
+                    icon.className = 'bi bi-list'; // Reset icon
+                    dropdown.style.display = 'none'; // Close dropdown
                 }
             });
         });
