--- a/career.html
+++ b/career.html
@@ -33,9 +33,12 @@
   <nav class="new-navbar-container">
     <!-- Top part of navbar -->
     <div class="new-navbar-top">
-      <div class="new-navbar-logo">
+      <!-- <div class="new-navbar-logo">
         <img src="assets/images/navbarlogo/logo-alt.webp" alt="BIPL Logo">
-      </div>
+      </div> -->
+      <a href="./index.html" class="new-navbar-logo">
+        <img src="assets/images/navbarlogo/logo-alt.webp" alt="BIPL Logo">
+      </a>
       <ul class="new-navbar-links pt-lg-3">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About Us</a></li>
@@ -394,7 +397,8 @@
         <!-- frame 39 -->
         <div class="col-md-3 mb-4 text-light pt-3 pt-md-5 pe-lg-5">
           <h3>Contact Us</h3>
-          <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall, Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
+          <p class="pt-3">Address - Bhagirath Industries Private Limited - 309, Luxuria Business Hub, Near VR Mall,
+            Udhana Magdalla Road, Surat - Dumas Road, Surat Gujarat - 395007</p>
         </div>
         <!-- frame 38 -->
         <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
