--- a/products.html
+++ b/products.html
@@ -31,9 +31,12 @@
   <nav class="new-navbar-container">
     <!-- Top part of navbar -->
     <div class="new-navbar-top">
-      <div class="new-navbar-logo">
+      <!-- <div class="new-navbar-logo">
         <img src="assets/images/navbarlogo/logo-alt.webp" alt="BIPL Logo">
-      </div>
+      </div> -->
+      <a href="./index.html" class="new-navbar-logo">
+        <img src="assets/images/navbarlogo/logo-alt.webp" alt="BIPL Logo">
+      </a>
       <ul class="new-navbar-links pt-lg-3">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About Us</a></li>
